fix the backgound image scrolling issue and un-displaying on safari issue

--- a/app_hubstar/app/styles/_topnavbar.css
+++ b/app_hubstar/app/styles/_topnavbar.css
@@ -278,7 +278,6 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    overflow: auto;
 }
 
 .Register-Page .ember-text-field, .Register-Page .ember-text-field:focus{
